# safers-dashboard-api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose.deployment.yml  docker-compose.yml  requirements.txt  run-celery.sh  run-cron.sh  run-django.sh  run-gunicorn.sh  run-rmq-worker.sh  run-uwsgi.sh  startup.sh
server/: Pipfile  pyproject.toml  pytest.ini
server/__pypackages__/: .gitignore
server/_static/: .gitignore
server/config/: __init__.py  asgi.py  logging.py  middleware.py  types.py  urls.py  wsgi.py
server/config/settings/: __init__.py  base.py  ci.py  deployment.py  development.py
server/safers/alerts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
server/safers/aois/: __init__.py  admin.py  apps.py  constants.py  models.py  serializers.py  urls.py  views.py
server/safers/auth/: apps.py  authentication.py  clients.py  permissions.py  schema.py  signals.py  urls.py  utils.py
server/safers/cameras/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
server/safers/chatbot/: __init__.py  apps.py  urls.py
server/safers/core/: __init__.py  apps.py  authentication.py  behaviors.py  clients.py  decorators.py  fields.py  filters.py  generics.py  managers.py  mixins.py  models.py  permissions.py  signals.py  storage.py  urls.py  widgets.py
server/safers/data/: __init__.py  apps.py  constants.py  permissions.py  serializers.py  urls.py  utils.py  views.py
server/safers/events/: __init__.py  admin.py  apps.py  models.py  (+4 more)
(+473 files in other folders)
